--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>bundles-lib</artifactId>
     <name>bundles-lib</name>
     <packaging>jar</packaging>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <description>Bundles System</description>
     <organization>
         <name>palindromicity</name>
@@ -15,7 +15,7 @@
         <connection>scm:git:https://github.com/palindromicity/bundles.git</connection>
         <developerConnection>scm:git:git@github.com:palindromicity/bundles.git</developerConnection>
         <url>https://github.com/palindromicity/bundles</url>
-        <tag>HEAD</tag>
+        <tag>bundles-lib-0.1.0</tag>
     </scm>
     <distributionManagement>
         <repository>
